# TalkFone

./: BUILD.Slackware  README.md
Linux-Slackware/iaxclient-code/: configure.ac
Linux-Slackware/iaxclient-code/lib/: audio_encode.c  audio_portaudio.c  codec_theora.c  iaxclient.h  slice.c  unixfuncs.c
Linux-Slackware/iaxclient-code/simpleclient/stresstest/: Makefile.am  file.h  stresstest.c
Linux-Slackware/kiax-code/: kiax2.pro
Linux-Slackware/kiax-code/gui/: DotTelUtils.h  Kiax2AboutDialog.cpp  Kiax2AboutDialog.h  Kiax2AccountDialog.cpp  Kiax2AccountDialog.h  Kiax2Application.cpp  Kiax2Application.h  Kiax2CallAppearance.h  Kiax2CallDialog.cpp  Kiax2CallDialog.h  Kiax2CallDialogView.cpp  Kiax2Callbutton.cpp  Kiax2ChangePassDialog.cpp  gui.pro  (+23 more)
OSX-10.11.6/: BUILD.OSX-10.11.6  README.md
OSX-10.11.6/iaxclient-code/: iaxclient.pc.in
iaxclient-code/.svn/: wc.db
iaxclient-code/lib/: codec_ffmpeg.c  iaxclient_lib.c  iaxclient_lib.h  video.c
kiax-code/.svn/: wc.db
kiax-code/gui/: DotTelUtils.cpp  IAX2CallbackHandlerQt.cpp  Kiax2ContactListItemWidget.cpp  Kiax2DispatcherServer.cpp  Kiax2DispatcherServer.h  Kiax2DotTelDialog.h  Kiax2JSONSupernode.cpp  Kiax2JSONUsersOnline.cpp  Kiax2ListWidgetItem.cpp  Kiax2LoginScreen.h  Kiax2MainWindow.cpp  Kiax2MainWindow.h  Kiax2RegisterDialog.h  dotteldialog.ui  loginscreen.ui  registerdialog.ui
kiax-code/kiax2core/: AbstractModule.cpp  Account.cpp  Account.h  AccountsModule.h  CDRAPI.h  CDRModule.h  CDRModuleImpl.h  ConfigurationAPI.h  ConfigurationParameter.cpp  Contact.cpp  ContactsAPI.h  Serializable.h  SignalingAPI.h
(+95 files in other folders)
